objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__Stop_Indexing_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</description>
        <inlineHelpText>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</inlineHelpText>
        <label>Stop Indexing Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_Other__c</fullName>
        <label>Story Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_SFDC__c</fullName>
        <label>Story Points SFDC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team which will tackle the User Story.</description>
        <inlineHelpText>Team which will tackle the User Story.</inlineHelpText>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
        <inlineHelpText>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within</inlineHelpText>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c+copado__Story_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>is_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Validated</label>
        <type>Checkbox</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__userStory_Role__c</columns>
        <columns>copado__userStory_need__c</columns>
        <columns>copado__userStory_reason__c</columns>
        <columns>copado__Story_Points_SFDC__c</columns>
        <columns>copado__Story_Points_Other__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Sprint__c</columns>
        <columns>copado__Release__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>copado__Cli_Listview</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Org_Credential__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Cli Listview</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>CICD_Closed</fullName>
        <active>true</active>
        <description>Controls the layout &amp; options available once the US is deployed to production</description>
        <label>Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>CICD_ManualDeployment</fullName>
        <active>true</active>
        <description>Controls the layout &amp; options available for a RM to support non CICD applications</description>
        <label>Manual Deployment</label>
    </recordTypes>
    <recordTypes>
        <fullName>CICD_PostLeadApprovalToInt</fullName>
        <active>true</active>
        <description>Controls the layout &amp; options available post Dev Lead approval of US deployment to INT</description>
        <label>Post Lead Approval to INT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CICD_PreLeadApprovalToInt</fullName>
        <active>true</active>
        <description>Controls the layout &amp; options available prior to Dev Lead approving the US to be deployed to INT</description>
        <label>Pre Lead Approval to INT</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>false</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>false</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>false</active>
        <label>User Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Pull_request_Approval_check</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(INCLUDES(copado__Metadata_Types_in_Selection__c , &quot;ApexPage&quot;),INCLUDES(copado__Metadata_Types_in_Selection__c , &quot;ApexTrigger&quot;),INCLUDES(copado__Metadata_Types_in_Selection__c , &quot;ApexComponent&quot;),INCLUDES(copado__Metadata_Types_in_Selection__c , &quot;ApexClass&quot;),INCLUDES(copado__Metadata_Types_in_Selection__c , &quot;AuraDefinitionBundle&quot;)), AND( 
OR(copado__Promote_and_Deploy__c =true, 
copado__Promote_Change__c =true),
copado__Pull_Requests_Approved__c=false,ByPassPRValidation__c=false) ,AND( 
OR(copado__Promote_and_Deploy__c =true, 
copado__Promote_Change__c =true),
copado__Pull_Requests_Approved__c=false,ByPassPRValidation__c=false))</errorConditionFormula>
        <errorMessage>Compliance Check Not Met</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title_Starts_with_Jira_Key</fullName>
        <active>false</active>
        <errorConditionFormula>IF(NOT(REGEX( copado__User_Story_Title__c , &quot;^SAL-[0-9]{1,5}[a-zA-Z0-9 ]*${0,250}&quot;)),  IF(NOT(REGEX( copado__User_Story_Title__c , &quot;^BDT-[0-9]{1,5}[a-zA-Z0-9 ]*${0,250}&quot;)), true, false) , false)</errorConditionFormula>
        <errorMessage>Please Start with Jira Key</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>false</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
</CustomObject>